--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -4,6 +4,7 @@ metadata:
   name: todo-service
   labels:
     apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/has-tests: "true"
     app.kubernetes.io/part-of: todos-app
 spec:
   params:
