--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>2.6.13</version>
+<!-- 			<version>2.6.13</version> -->
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.7.1</version>
+<!-- 			<version>2.7.1</version> -->
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
