--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -11,7 +11,7 @@ metadata:
     - tanzu
   annotations:
     'backstage.io/kubernetes-label-selector': 'app.kubernetes.io/part-of=todos-app'
-    'backstage.io/techdocs-ref': dir:.
+    'backstage.io/techdocs-ref': dir:../.
 spec:
   type: service
   lifecycle: experimental
