--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: todo-service
+  name: todo-service-app
   description: Todo Service
   tags:
     - app-accelerator
