--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -3,7 +3,7 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: #@ data.value.artifactId
+  name: #@ data.values.artifactId
   labels:
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/has-tests: "true"
