--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/has-tests: "true"
-    app.kubernetes.io/part-of: #@ data.value.artifactId
+    app.kubernetes.io/part-of: #@ data.values.artifactId
     #@ if data.values.includeApiDocs:
     apis.apps.tanzu.vmware.com/register-api: "true"
     #@ end
