--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -12,6 +12,10 @@ spec:
     env:
     - name: BP_JVM_VERSION
       value: "17"
+    # - name: BP_MAVEN_BUILD_ARGUMENTS
+    #   value: "-Dmaven.test.skip=true -Pnative --no-transfer-progress package"
+    - name: BP_NATIVE_IMAGE
+      value: "true"
   params:
   - name: annotations
     value:
