--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.0</version>
+		<version>2.7.6</version>
 		<relativePath />
 	</parent>
 	<groupId>com.odedia</groupId>
@@ -18,6 +18,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
+		<repackage.classifier/>
+		<spring-native.version>0.12.1</spring-native.version>
 	</properties>
 
 	<dependencyManagement>
@@ -54,6 +56,11 @@
 			<version>2.7.1</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.experimental</groupId>
+			<artifactId>spring-native</artifactId>
+			<version>${spring-native.version}</version>
+  	    </dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -94,4 +101,24 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+		  <id>spring-releases</id>
+		  <name>Spring Releases</name>
+		  <url>https://repo.spring.io/release</url>
+		  <snapshots>
+			<enabled>false</enabled>
+		  </snapshots>
+		</repository>
+	  </repositories>
+	  <pluginRepositories>
+		<pluginRepository>
+		  <id>spring-releases</id>
+		  <name>Spring Releases</name>
+		  <url>https://repo.spring.io/release</url>
+		  <snapshots>
+			<enabled>false</enabled>
+		  </snapshots>
+		</pluginRepository>
+	  </pluginRepositories>
 </project>
