--- a/pom.xml
+++ b/pom.xml
@@ -99,26 +99,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-		  <id>spring-releases</id>
-		  <name>Spring Releases</name>
-		  <url>https://repo.spring.io/release</url>
-		  <snapshots>
-			<enabled>false</enabled>
-		  </snapshots>
-		</repository>
-	  </repositories>
-	  <pluginRepositories>
-		<pluginRepository>
-		  <id>spring-releases</id>
-		  <name>Spring Releases</name>
-		  <url>https://repo.spring.io/release</url>
-		  <snapshots>
-			<enabled>false</enabled>
-		  </snapshots>
-		</pluginRepository>
-	  </pluginRepositories>
 </project>
